5.1.4 -> 5.1.5:
    - bero: Fix hang when using rpmdsSingle and rpm4compat.h from C++
    - rse: configure: do not complain with "python: file not found" on platforms without python(1) in PATH

5.1.3 -> 5.1.4:
    - jbj: http: ignore 501 from OPTIONS attempt to non-DAV server.
    - jbj: fix: "%description -n foo-bar" needs an additional comparison.
    - jbj: add non-{GIF,XPM} formats opaquely using arbitrary Icon: tagno.
    - jbj: fix: allocate Icon: buffer after iconsize is initialized.
    - jbj: permit configurable POSIX behavior for parameterized macros
	(Marcin Kowalczyk<qrczak@knm.org.pl>).
    - jbj: fix: skip %exclude/%ghost files to get more accurate RPMTAG_SIZE.
    - jbj: fix: RPMTAG_SIZE is incorrect with %exclude and %ghost directives
        (Alexey Tourbin<at@altlinux.ru>).
    - rse: fix portability by providing own RPM_LIST_XXX macros in rpmmtree.c

5.1.2 -> 5.1.3:
    - rse: enhance RPM_CHECK_LIB to query pkg-config(1) --libs-only-L to get -L<dir> options, too.
    - rse: add support for "lib<name>-config" and "lib<name>.pc" in RPM_CHECK_LIB
    - rse: unbreak building without LZMAUtils library
    - jbj: fix: reattach RPMMIRE_DEFAULT as posix regex, not strcmp, pattern.
    - jbj: lzdio: start using -llzma instead.
    - jbj: tests: add coverage for %pretrans et al scriptlets.
    - rse: upgrade the embedded lrexlib Lua library from version 2.2.0 to 2.3.0
    - rse: apply upstream vendor patches from 2008-05-08 for Lua 5.1.3
    - jbj: tests: verify upgrades using the edos-test packages.
    - jbj: parser: inherit group/summary/description if not specified in subpkg.
    - jbj: parser: permit identically named sub-pkgs with different versions.
    - jbj: parser: trim comments where it makes sense to do so.
    - jbj: tests: add check-install target to attempt --relocate install.
    - jbj: tests: enhance the devtool-sanity package with scripts and a file.
    - jbj: tests: verify -Kv output using popt.